# ByteOps2.0

./: .env.example  .gitignore  AGENTS.md  dev.ps1
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_agent_tables.py  0002_workflow_metadata.py
backend/app/: __init__.py  main.py
backend/app/agents/: calendar_agent.py  dropbox_agent.py  github_agent.py  gmail_agent.py  jira_agent.py  orchestrator.py  response_format.py  slack_agent.py
backend/app/api/: agent_runs.py  chat.py  notifications.py  oauth.py  sync.py  tools.py  users.py  workflows.py
backend/app/core/: auth.py  config.py  database.py  llm_client.py  security.py
backend/app/mcp_servers/calendar/: __init__.py  server.py
backend/app/mcp_servers/dropbox/: server.py
backend/app/mcp_servers/github/: server.py
backend/app/mcp_servers/gmail/: server.py
backend/app/models/: __init__.py  agent_run.py  conversation.py  message.py  notification.py  tool_connection.py  user.py  workflow.py
backend/app/services/: agent_planner.py  agent_policy.py  agent_runtime.py  workflow_creation.py  workflow_runner.py
backend/tests/: conftest.py  test_agent_policy.py  test_agent_runtime.py  test_approval_flow.py  test_calendar_agent.py  test_calendar_mcp_server.py  test_chat_activity_notification.py  test_chat_agent_run.py  test_chat_calendar_routing.py  test_oauth.py  test_response_format.py  test_workflow_creation.py  test_workflow_draft_approval.py  test_workflows.py
docs/: FUTURE_WORK.md
(+184 files in other folders)
